# cute-minimal

./: .gitignore  README.md
cmake/: CUTE_MINIMALConfig.cmake
cute-minimal-test/gcc/: CMakeLists.txt  tester.cpp
cute-minimal-test/nvcc/: CMakeLists.txt  tester.cu
include/cute/: int_tuple.hpp  tensor.hpp  tensor_impl.hpp
include/cute/algorithm/: axpby.hpp  cooperative_gemm.hpp  functional.hpp
include/cute/atom/: copy_atom.hpp  mma_atom.hpp
include/cute/container/: tuple.hpp
include/cute/numeric/: int.hpp  integral_constant.hpp  math.hpp  numeric_types.hpp
include/cute/util/: cuda_debug.hpp  debug.hpp  hip_debug.hpp  print.hpp
include/extra/cute/: host_tensor.hpp  tuple_utils.hpp
